--- a/src/components/ModalForm/ModalForm.css
+++ b/src/components/ModalForm/ModalForm.css
@@ -4,6 +4,10 @@
   margin: 0 auto;
   margin-top: 50px;
 }
+
+fieldset {
+  background-color: #212529;
+}
 .form-style-3 label {
   display: block;
   margin-bottom: 10px;
@@ -23,7 +27,7 @@
   margin: 0px 0px 10px 0px;
   border: 1px solid #ffd2d2;
   padding: 20px;
-  background: #fff4f4;
+  background: #212529;
   box-shadow: inset 0px 0px 15px #ffe5e5;
   -moz-box-shadow: inset 0px 0px 15px #ffe5e5;
   -webkit-box-shadow: inset 0px 0px 15px #ffe5e5;
@@ -36,7 +40,7 @@
   border-radius: 5px 5px 0px 0px;
   -webkit-border-radius: 5px 5px 0px 0px;
   -moz-border-radius: 5px 5px 0px 0px;
-  background: #fff4f4;
+  background: #212529;
   padding: 0px 8px 3px 8px;
   box-shadow: -0px -1px 2px #f1f1f1;
   -moz-box-shadow: -0px -1px 2px #f1f1f1;
@@ -68,12 +72,12 @@
   box-shadow: inset 1px 1px 4px #ffd5e7;
   -moz-box-shadow: inset 1px 1px 4px #ffd5e7;
   -webkit-box-shadow: inset 1px 1px 4px #ffd5e7;
-  background: #ffeff6;
+  background: #212529;
   width: 50%;
 }
 .form-style-3 input[type='submit'],
 .form-style-3 input[type='button'] {
-  background: #eb3b88;
+  background: #212529;
   border: 1px solid #c94a81;
   padding: 5px 15px 5px 15px;
   color: #ffcbe2;
