--- a/src/components/ModalForm/ModalForm.css
+++ b/src/components/ModalForm/ModalForm.css
@@ -4,10 +4,6 @@
   margin: 0 auto;
   margin-top: 50px;
 }
-
-fieldset {
-  background-color: #212529;
-}
 .form-style-3 label {
   display: block;
   margin-bottom: 10px;
@@ -27,7 +23,7 @@ fieldset {
   margin: 0px 0px 10px 0px;
   border: 1px solid #ffd2d2;
   padding: 20px;
-  background: #212529;
+  background: #fff4f4;
   box-shadow: inset 0px 0px 15px #ffe5e5;
   -moz-box-shadow: inset 0px 0px 15px #ffe5e5;
   -webkit-box-shadow: inset 0px 0px 15px #ffe5e5;
@@ -40,7 +36,7 @@ fieldset {
   border-radius: 5px 5px 0px 0px;
   -webkit-border-radius: 5px 5px 0px 0px;
   -moz-border-radius: 5px 5px 0px 0px;
-  background: #212529;
+  background: #fff4f4;
   padding: 0px 8px 3px 8px;
   box-shadow: -0px -1px 2px #f1f1f1;
   -moz-box-shadow: -0px -1px 2px #f1f1f1;
@@ -72,12 +68,12 @@ fieldset {
   box-shadow: inset 1px 1px 4px #ffd5e7;
   -moz-box-shadow: inset 1px 1px 4px #ffd5e7;
   -webkit-box-shadow: inset 1px 1px 4px #ffd5e7;
-  background: #212529;
+  background: #ffeff6;
   width: 50%;
 }
 .form-style-3 input[type='submit'],
 .form-style-3 input[type='button'] {
-  background: #212529;
+  background: #eb3b88;
   border: 1px solid #c94a81;
   padding: 5px 15px 5px 15px;
   color: #ffcbe2;
